# Plant-Watering-Sensor

./: Cargo.toml  Embed.toml  README.md  feature_list.md
src/: lib.rs  main.rs  peripheral_access.rs  state_machine_logic.rs  utils.rs  ux_lib.rs
