[package]
authors = ["Caio Tavares <caio.tavares11@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "arm-hello-world-rust"
version = "0.1.0"

[dependencies]
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"
msp432p401r-pac = "0.2.0"
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }

[lib]
name = "lib"
path = "src/lib.rs"

# this lets you use `cargo fix`!
[[bin]]
name = "arm-hello-world-rust"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
