[package]
authors = ["Caio Tavares <caio.tavares11@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "msp432_rtic"
version = "0.1.0"

[dependencies]

panic-halt = "0.2.0"



#rtic = { version = "2.1.1", features = ["thumbv7-backend"] }
#rtt-target = "0.5.0"
#sfsm = "0.4.3"

cortex-m = { version = "0.6.7", features = ["const-fn"] }
msp432p401r-hal = "0.2.0"





[lib]
name = "lib"
path = "src/lib.rs"

# this lets you use `cargo fix`!
[[bin]]
name = "msp432_rtic"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
